--- a/assessment1/pom.xml
+++ b/assessment1/pom.xml
@@ -14,9 +14,10 @@
 	<name>assessment1</name>
 	<description>first group project</description>
 	<properties>
-		<java.version>17</java.version>
-		<java.version>17</java.version>
+		<java.version>20</java.version>
+		<java.version>20</java.version>
 		<org.mapstruct.version>1.5.5.Final</org.mapstruct.version>
+		<org.projectlombok.version>1.18.26</org.projectlombok.version>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -74,7 +75,6 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
-				<version>3.8.1</version>
 				<configuration>
 					<source>11</source>
 					<target>11</target>
